[tool.poetry]
name = "graphene-gino"
version = "0.1.0"
description = ""
authors = ["Tiago Requeijo <tiago.requeijo.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
graphene = "3.0.0b0"
graphql-relay = "^3.0.0"
gino = "^0.8.5"
SQLAlchemy = "^1.3"
singledispatch = "^3.4"
promise = "^2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
pytest-cov = "^2.6"
pytest-flake8 = "^1.0"
pytest-mypy = "^0.4.1"
flake8-docstrings = "^1.3"
flake8-comprehensions = "^2.0"
flake8-import-order = "^0.18.0"
flake8-bugbear = "^18.8"
flake8-blind-except = "^0.1.1"
flake8-builtins = "^1.4"
pytest-black = "^0.3.7"
sqlalchemy-stubs = "^0.2.0"
mock = "^3.0.5"

[build-system]
requires = ["poetry>=1.0.0b1"]
build-backend = "poetry.masonry.api"
